# music_fed364847

./: .gitignore  README.md  actven.py  autocommit.py  main.py  pyproject.toml  requirements.txt
artists/artists/: asgi.py  settings.py  urls.py  wsgi.py
artists_card/: admin.py  apps.py  models.py  urls.py  views.py
artists_card/migrations/: 0001_initial.py
artists_card/templates/: artist_page.html  auth_form.html  mainpage.html  register_page.html  search_results.html
config/: .env.example  db_config.yaml
data/: dataperson.json
go_service/: Dockerfile  compile_proto.bat  datafake.go  datafake.txt  db_work.go  file_manage.go  go.mod  go.sum  grpc_server.go  init.go  jwt.go  logger.go  main.go  password.go  query.go  script.go  struct.go
go_service/protos/: message.proto
logs/: db_info.json  grpc_server.json  log.json
protos/: message.proto
python_script/: datafake.py  db_parser.py  main.py
tests/python/: load_test.py  message_pb2.py  message_pb2_grpc.py  ramp_test.py  test_grpc.py
