[project]
name = "music-fed364847"
version = "0.1.0"
description = ""
authors = [
    {name = "IGMA-IGMA",email = "i9296517650@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython (>=3.1.46,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
